syntax = "proto3";

package erponomics.manufacturing.v1.item.repository;

import "erponomics/manufacturing/v1/item.proto";
import "google/protobuf/empty.proto";

service ItemCommandService {
  rpc CreateItem(CreateItemRequest) returns (Item) {
    option (google.api.http) = {
      post: "v1/items",
      body: "item"
    };
    option (google.api.method_signature) = "item,item_id";
  }

  rpc UpdateItem(UpdateItemRequest) returns (Item) {
    option (google.api.http) = {
      patch: "/v1/{item.name=items/*}",
      body: "item"
    };
    option (google.api.method_signature) = "item";
  }

  rpc DeleteItem(DeleteItemRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/{name=items/*}"
    };
    option (google.api.method_signature) = "name";
  }

  message CreateItemRequest {
    // The ID to use for the item, which will become the final component of
    // the item's resource name.
    //
    // This value should be 4-63 characters, and valid characters
    // are /[a-z][0-9]-/.
    // Format: ^[a-z]([a-z0-9-]{2-61}[a-z0-9])?$
    string item_id = 1 [(google.api.field_behavior) = REQUIRED];
 
    // The item to create.
    Item item = 2 [(google.api.field_behavior) = REQUIRED];
  }

  message UpdateItemRequest {
    // The item to update.
    //
    // The item's `name` field is used to identify the item to update.
    // Format: items/{item}
    Item item = 1 [(google.api.field_behavior) = REQUIRED];
  }

  message DeleteItemRequest {
    // The name of the item to delete.
    // Format: items/{item}
    string name = 1 [
      (google.api.field_behavior) = REQUIRED,
      (google.api.resource_reference) = {
        type: "manufacturing.erponomics.com/Item"
      }];
  }
}
